--- a/frontend/src/index.scss
+++ b/frontend/src/index.scss
@@ -1,7 +1,16 @@
-$theme-colors: (
-  "primary": #f15b25,
+@import "bootstrap/scss/functions";
+@import "bootstrap/scss/variables";
+
+$primary: #f15b25;
+
+$theme-colors: map-merge(
+  $theme-colors,
+  (
+    "primary": $primary,
+  )
 );
 
+@import "bootstrap/scss/mixins";
 @import "bootstrap/scss/bootstrap";
 
 * {
